add get images of product comments
